--- a/secret-integers/Cargo.toml
+++ b/secret-integers/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "secret_integers"
-version = "0.1.6"
+version = "0.1.7"
 authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
 description = "Wrapping around Rust's integers to allow only constant-time operations"
 license = "Apache-2.0"
-repository = "https://github.com/denismerigoux/rust-secret-integers"
+repository = "https://github.com/hacspec/hacspec"
 keywords = ["secret", "constant-time"]
 readme = "README.md"
 
