Review abstract integers

--- a/abstract-integers/Cargo.toml
+++ b/abstract-integers/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "abstract_integers"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
 description = "Defining specification-friendly bounded natural integer types"
-repository = "https://github.com/denismerigoux/rust-abstract-integers"
+repository = "https://github.com/hacspec/hacspec"
 edition = "2018"
 keywords = ["integers", "specification"]
 license = "Apache-2.0"
