Added attribute system

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ members = [
     "hacspec",
     "secret-integers",
     "abstract-integers",
-    "spec-examples"
+    "spec-examples",
+    "attributes"
 ]
