--- a/hacspec/Cargo.toml
+++ b/hacspec/Cargo.toml
@@ -16,3 +16,4 @@ serde = {version = "1.0", features = ["derive"]}
 # TODO: this need to change for releases
 secret_integers = { path = "../secret-integers" }
 abstract_integers = { path = "../abstract-integers" }
+hacspec_attributes = { path = "../attributes" }
