--- a/attributes/Cargo.toml
+++ b/attributes/Cargo.toml
@@ -14,6 +14,7 @@ proc-macro = true
 syn = { version = "1.0.17", features= ["full", "visit"] }
 proc-macro2 = { version = "1.0.10", features = ["span-locations"] }
 ansi_term = "0.12.1"
+quote = "1.0"
 
 [features]
 default = []
