Install nightly toolchain before building

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Prepare
+      run: rustup toolchain install nightly
     - name: Build
       run: cargo +nightly build --verbose
     - name: Run tests
