--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -12,9 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Prepare
-      run: rustup toolchain install nightly
     - name: Build
-      run: cargo +nightly build --verbose
+      run: cargo build --verbose
     - name: Run tests
-      run: cargo +nightly test --verbose
+      run: cargo test --verbose
