--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@master
       - name: Build docs
         run: |
-          rustup install toolchain nightly
+          rustup toolchain install nightly
           cargo +nightly doc --all-features
           touch target/doc/.nojekyll
           cat > target/doc/index.html <<EOF
