add hacspec-dev crate and move test_vector code there

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 [workspace]
 members = [
     "hacspec",
+    "hacspec-dev",
     "secret-integers",
     "abstract-integers",
     "spec-examples",
