--- a/hacspec-dev/Cargo.toml
+++ b/hacspec-dev/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hacspec-examples"
+name = "hacspec-dev"
 version = "0.1.0"
 authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
 edition = "2018"
@@ -7,6 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hacspec = { path= "../hacspec" }
-secret_integers = { path = "../secret-integers" }
-abstract_integers = { path = "../abstract-integers" }
+serde_json = "1.0"
+serde = {version = "1.0", features = ["derive"]}
