--- a/hacspec/Cargo.toml
+++ b/hacspec/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hacspec"
 version = "0.1.0"
-authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
+authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,11 +9,7 @@ edition = "2018"
 [dependencies]
 rand = "0.7"
 num = "0.2"
-# TODO: serde is only necessary for the test crate/feature
-serde_json = "1.0"
-serde = {version = "1.0", features = ["derive"]}
 
-# TODO: this need to change for releases
 secret_integers = { path = "../secret-integers" }
 abstract_integers = { path = "../abstract-integers" }
 hacspec_attributes = { path = "../attributes",  optional = true }
