--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -12,7 +12,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Prepare
+      run: rustup toolchain install nightly
     - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Get hacspec function stats
+      run: bash hacspec/get_func_stats.sh
