--- a/spec-examples/Cargo.toml
+++ b/spec-examples/Cargo.toml
@@ -7,6 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hacspec = { path= "../hacspec" }
+hacspec = { path = "../hacspec" }
 secret_integers = { path = "../secret-integers" }
 abstract_integers = { path = "../abstract-integers" }
+
+[dev-dependencies]
+# FIXME: Why?
+serde_json = "1.0"
+serde = {version = "1.0", features = ["derive"]}
+hacspec-dev = { path = "../hacspec-dev" }
