--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/checkout@master
       - name: Build docs
         run: |
-          rustup toolchain install nightly
-          cargo +nightly doc --all-features
+          rustup toolchain install nightly-2020-05-14
+          cargo +nightly-2020-05-14 doc --all-features
           touch target/doc/.nojekyll
           cat > target/doc/index.html <<EOF
           <!doctype html>
