--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -13,12 +13,12 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Prepare
-      run: rustup toolchain install nightly && rustup toolchain install nightly-2020-05-14
+      run: rustup toolchain install nightly && rustup toolchain install nightly
     - name: Build
-      run: cargo build --verbose
+      run: cargo build +nightly --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test +nightly --verbose
     - name: Get hacspec function stats
       run: bash hacspec/get_func_stats.sh
       env:
-        RUST_NIGHTLY: nightly-2020-05-14
+        RUST_NIGHTLY: nightly
