--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -13,7 +13,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Prepare
-      run: rustup toolchain install nightly && rustup toolchain install nightly
+      run: rustup toolchain install nightly && \
+           rustup toolchain install nightly && \
+           rustup component install rustc && \
     - name: Build
       run: cargo +nightly build --verbose
     - name: Run tests
