--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -8,16 +8,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
 
     steps:
     - uses: actions/checkout@v1
     - name: Prepare
-      run: rustup toolchain install nightly && rustup toolchain install nightly && rustup component add rustc
+      run: rustup toolchain install nightly && rustup default nightly && rustup component add rustc
     - name: Build
-      run: cargo +nightly build --verbose
+      run: cargo build --verbose
     - name: Run tests
-      run: cargo +nightly test --verbose
+      run: cargo test --verbose
     - name: Get hacspec function stats
       run: bash hacspec/get_func_stats.sh
       env:
