--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Prepare
-      run: rustup toolchain install nightly && rustup default nightly && rustup component add rust-src
+      run: rustup toolchain install nightly && rustup default nightly && rustup component add --toolchain nightly rustc-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
