--- a/hacspec-lang/Cargo.toml
+++ b/hacspec-lang/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 
 [dependencies]
 clap = {version = "~2.33.1", features = ["yaml"]}
+pretty = "0.10.0"
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
-hacspec = { path = '../hacspec' } 
+hacspec = { path = '../hacspec' }
