--- a/hacspec-lang/Cargo.toml
+++ b/hacspec-lang/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 [dependencies]
 clap = {version = "~2.33.1", features = ["yaml"]}
 pretty = "0.10.0"
+im = "15.0.0"
+itertools = "0.9.0"
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
