--- a/hacspec-lang/src/cli.yml
+++ b/hacspec-lang/src/cli.yml
@@ -17,3 +17,23 @@ args:
         multiple: false
         number_of_values: 1
         help: Name of the F* output file
+    - dependency:
+        short: L
+        multiple: true
+        number_of_values: 1
+        help: dependencies
+    - crate-type:
+        long: crate-type
+        multiple: false
+        number_of_values: 1
+        help: bin|lib|rlib|dylib|cdylib|staticlib|proc-macro
+    - extern:
+        long: extern
+        multiple: true
+        number_of_values: 1
+        help: extern crates
+    - edition:
+        long: edition
+        multiple: false
+        number_of_values: 1
+        help: put 2018
