--- a/hacspec-lang/Cargo.toml
+++ b/hacspec-lang/Cargo.toml
@@ -11,6 +11,7 @@ clap = {version = "~2.33.1", features = ["yaml"]}
 pretty = "0.10.0"
 im = "15.0.0"
 itertools = "0.9.0"
+walkdir = "2.3.1"
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
