--- a/hacspec-lang/Cargo.toml
+++ b/hacspec-lang/Cargo.toml
@@ -12,7 +12,7 @@ pretty = "0.10.0"
 im = "15.0.0"
 itertools = "0.9.0"
 walkdir = "2.3.1"
+hacspec = { path = '../hacspec', features = ["use_attributes"] }
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
-hacspec = { path = '../hacspec' }
