--- a/hacspec-dev/Cargo.toml
+++ b/hacspec-dev/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
+syn = { version = "1.0.17", features= ["full", "visit"] }
