--- a/hacspec-lang/Cargo.toml
+++ b/hacspec-lang/Cargo.toml
@@ -13,6 +13,8 @@ im = "15.0.0"
 itertools = "0.9.0"
 walkdir = "2.3.1"
 hacspec = { path = '../hacspec', features = ["use_attributes"] }
+hacspec-dev = { path = "../hacspec-dev" }
+serde_json = "1.0"
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
