--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v1
@@ -20,5 +20,7 @@ jobs:
       run: cargo test --verbose
     - name: Get hacspec function stats
       run: bash hacspec/get_func_stats.sh
+    - name: Build and test F* compiler
+      run: cargo clean && cd hacpsec-lang && cargo +nightly test --verbose
       env:
         RUST_NIGHTLY: nightly
