--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,12 @@ members = [
     "spec-examples",
     "attributes",
 ]
+default-members = [
+    "hacspec",
+    "hacspec-dev",
+    "hacspec-derive",
+    "secret-integers",
+    "abstract-integers",
+    "spec-examples",
+    "attributes",
+]
