Removed problematic allowlist (for now)

--- a/attributes/Cargo.toml
+++ b/attributes/Cargo.toml
@@ -20,3 +20,4 @@ hacspec-dev = { path = "../hacspec-dev" }
 [features]
 default = []
 print_attributes = []
+update_allowlist = [ "print_attributes" ]
