--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Get hacspec function stats
       run: bash hacspec-lib/get_func_stats.sh
     - name: Build and test F* compiler
-      run: cargo clean && cd hacspec-lang && cargo +nightly test --verbose
+      run: cargo clean && cd hacspec && cargo +nightly test --verbose
       env:
         RUST_NIGHTLY: nightly
