--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "abstract-integers",
     "spec-examples",
     "hacspec-attributes",
+    "hacspec-sig"
 ]
 default-members = [
     "hacspec-lib",
@@ -17,4 +18,5 @@ default-members = [
     "abstract-integers",
     "spec-examples",
     "hacspec-attributes",
+    "hacspec-sig"
 ]
