--- a/hacspec-sig/Cargo.toml
+++ b/hacspec-sig/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "hacspec-dev"
+name = "hacspec-sig"
 version = "0.1.0"
-authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
+authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
+syn = { version = "1.0.17", features= ["full", "visit"] }
