--- a/hacspec/Cargo.toml
+++ b/hacspec/Cargo.toml
@@ -14,6 +14,7 @@ itertools = "0.9.0"
 walkdir = "2.3.1"
 hacspec-dev = { path = "../hacspec-dev" }
 serde_json = "1.0"
+hacspec-sig = { path = "../hacspec-sig" }
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
