--- a/spec-examples/Cargo.toml
+++ b/spec-examples/Cargo.toml
@@ -18,3 +18,9 @@ serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 rayon = "1.3.0"
 hacspec-dev = { path = "../hacspec-dev" }
+criterion = "^0.3"
+rand = "^0.7"
+
+[[bench]]
+name = "benchmarks"
+harness = false
