--- a/hacspec/src/cli.yml
+++ b/hacspec/src/cli.yml
@@ -3,10 +3,11 @@ version: "1.0"
 author: Denis Merigoux <denis.merigoux@inria.fr>
 about: Typechecker and compiler for the Hacspec subset of Rust
 args:
-    - INPUT:
-        help: Sets the input file to use
+    - INPUTS:
+        help: Sets the input files to use
         required: true
         index: 1
+        multiple: true
     - verbose:
         short: v
         multiple: true
