--- a/spec-examples/Cargo.toml
+++ b/spec-examples/Cargo.toml
@@ -11,7 +11,7 @@ hacspec-lib = { path = "../hacspec-lib" }
 hacspec-derive = { path = "../hacspec-derive" }
 secret_integers = { path = "../secret-integers" }
 abstract_integers = { path = "../abstract-integers" }
-hacspec-examples-typechecked = { path = "../hacspec-examples" }
+hacspec-chacha20 = { path = "../hacspec-examples/hacspec-chacha20" }
 
 [dev-dependencies]
 # FIXME: Why?
