--- a/hacspec-examples/hacspec-chacha20/Cargo.toml
+++ b/hacspec-examples/hacspec-chacha20/Cargo.toml
@@ -1,20 +1,23 @@
 [package]
-name = "hacspec-examples-typechecked"
+name = "hacspec-chacha20"
 version = "0.1.0"
 authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
 
+[lib]
+path = "chacha20.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hacspec-lib = { path = "../hacspec-lib" }
-hacspec-derive = { path = "../hacspec-derive" }
-secret_integers = { path = "../secret-integers" }
-abstract_integers = { path = "../abstract-integers" }
+hacspec-lib = { path = "../../hacspec-lib" }
+hacspec-derive = { path = "../../hacspec-derive" }
+secret_integers = { path = "../../secret-integers" }
+abstract_integers = { path = "../../abstract-integers" }
 
 [dev-dependencies]
 # FIXME: Why?
 serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 rayon = "1.3.0"
-hacspec-dev = { path = "../hacspec-dev" }
+hacspec-dev = { path = "../../hacspec-dev" }
