--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ members = [
     "secret-integers",
     "abstract-integers",
     "hacspec-examples/hacspec-chacha20",
+    "hacspec-examples/hacspec-poly1305",
+    "hacspec-examples/hacspec-chacha20poly1305",
     "spec-examples",
     "hacspec-attributes",
     "hacspec-sig"
@@ -18,6 +20,8 @@ default-members = [
     "secret-integers",
     "abstract-integers",
     "hacspec-examples/hacspec-chacha20",
+    "hacspec-examples/hacspec-poly1305",
+    "hacspec-examples/hacspec-chacha20poly1305",
     "spec-examples",
     "hacspec-attributes",
     "hacspec-sig"
