--- a/hacspec-examples/hacspec-chacha20poly1305/Cargo.toml
+++ b/hacspec-examples/hacspec-chacha20poly1305/Cargo.toml
@@ -1,19 +1,21 @@
 [package]
-name = "hacspec-chacha20"
+name = "hacspec-chacha20poly1305"
 version = "0.1.0"
 authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
 
-[lib]
-path = "src/chacha20.rs"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+path = "src/chacha20poly1305.rs"
 
 [dependencies]
 hacspec-lib = { path = "../../hacspec-lib" }
 hacspec-derive = { path = "../../hacspec-derive" }
 secret_integers = { path = "../../secret-integers" }
 abstract_integers = { path = "../../abstract-integers" }
+hacspec-chacha20 = { path = "../hacspec-chacha20" }
+hacspec-poly1305 = { path = "../hacspec-poly1305" }
 
 [dev-dependencies]
 # FIXME: Why?
@@ -21,3 +23,4 @@ serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 rayon = "1.3.0"
 hacspec-dev = { path = "../../hacspec-dev" }
+
