--- a/hacspec-examples/hacspec-poly1305/Cargo.toml
+++ b/hacspec-examples/hacspec-poly1305/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
 
 [lib]
-path = "poly1305.rs"
+path = "src/poly1305.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
