--- a/hacspec/Cargo.toml
+++ b/hacspec/Cargo.toml
@@ -20,3 +20,4 @@ assert_cmd = "1.0.1"
 hacspec-lib = { path = "../hacspec-lib" }
 hacspec-chacha20 = { path = "../hacspec-examples/hacspec-chacha20" }
 hacspec-poly1305 = { path = "../hacspec-examples/hacspec-poly1305" }
+hacspec-chacha20poly1305 = { path = "../hacspec-examples/hacspec-chacha20poly1305" }
