--- a/spec-examples/Cargo.toml
+++ b/spec-examples/Cargo.toml
@@ -13,6 +13,7 @@ secret_integers = { path = "../secret-integers" }
 abstract_integers = { path = "../abstract-integers" }
 hacspec-chacha20 = { path = "../hacspec-examples/hacspec-chacha20" }
 hacspec-poly1305 = { path = "../hacspec-examples/hacspec-poly1305" }
+hacspec-chacha20poly1305 = { path = "../hacspec-examples/hacspec-chacha20poly1305" }
 
 [dev-dependencies]
 # FIXME: Why?
