--- a/hacspec/Cargo.toml
+++ b/hacspec/Cargo.toml
@@ -15,6 +15,7 @@ walkdir = "2.3.1"
 serde_json = "1.0"
 hacspec-sig = { path = "../hacspec-sig" }
 heck = "0.3.1"
+regex = "1.3.9"
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
