--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "hacspec-examples/hacspec-chacha20",
     "hacspec-examples/hacspec-poly1305",
     "hacspec-examples/hacspec-chacha20poly1305",
+    "hacspec-examples/hacspec-ntru-demo",
     "spec-examples",
     "hacspec-attributes",
     "hacspec-sig"
@@ -22,6 +23,7 @@ default-members = [
     "hacspec-examples/hacspec-chacha20",
     "hacspec-examples/hacspec-poly1305",
     "hacspec-examples/hacspec-chacha20poly1305",
+    "hacspec-examples/hacspec-ntru-demo",
     "spec-examples",
     "hacspec-attributes",
     "hacspec-sig"
