--- a/hacspec/Cargo.toml
+++ b/hacspec/Cargo.toml
@@ -23,3 +23,4 @@ hacspec-lib = { path = "../hacspec-lib" }
 hacspec-chacha20 = { path = "../hacspec-examples/hacspec-chacha20" }
 hacspec-poly1305 = { path = "../hacspec-examples/hacspec-poly1305" }
 hacspec-chacha20poly1305 = { path = "../hacspec-examples/hacspec-chacha20poly1305" }
+hacspec-ntru-demo = { path = "../hacspec-examples/hacspec-ntru-demo" }
