--- a/fstar/Makefile
+++ b/fstar/Makefile
@@ -5,7 +5,7 @@
 FSTAR ?= $(FSTAR_HOME)/bin/fstar.exe --z3rlimit_factor 4
 
 # The root files of your project, from which to begin scanning dependences
-FSTAR_FILES ?= Hacspec.Poly1305.fst
+FSTAR_FILES ?= Hacspec.Poly1305.fst Hacspec.Chacha20.fst
 
 # The paths to related files which to include for scanning
 #   -- No need to add FSTAR_HOME/ulib; it is included by default
