--- a/examples/hacspec-ntru-prime/Cargo.toml
+++ b/examples/hacspec-ntru-prime/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "hacspec-ntru-demo"
+name = "hacspec-ntru-prime"
 version = "0.1.0"
 authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
 
 [lib]
-path = "src/ntru.rs"
+path = "src/ntru-prime.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
