--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     "examples/hacspec-chacha20",
     "examples/hacspec-poly1305",
     "examples/hacspec-chacha20poly1305",
+    "examples/hacspec-sha256",
     "examples/hacspec-sha3",
     "examples/hacspec-ntru-prime",
     "examples-unsafe",
@@ -27,6 +28,7 @@ default-members = [
     "examples/hacspec-chacha20",
     "examples/hacspec-poly1305",
     "examples/hacspec-chacha20poly1305",
+    "examples/hacspec-sha256",
     "examples/hacspec-sha3",
     "examples/hacspec-ntru-prime",
     "examples-unsafe",
