--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "utils/provider",
     "utils/sig",
     "language",
+    "examples/hacspec-curve25519",
     "examples/hacspec-chacha20",
     "examples/hacspec-poly1305",
     "examples/hacspec-chacha20poly1305",
@@ -25,6 +26,7 @@ default-members = [
     "utils/abstract-integers",
     "utils/attributes",
     "utils/sig",
+    "examples/hacspec-curve25519",
     "examples/hacspec-chacha20",
     "examples/hacspec-poly1305",
     "examples/hacspec-chacha20poly1305",
