--- a/utils/provider/Cargo.toml
+++ b/utils/provider/Cargo.toml
@@ -14,4 +14,6 @@ hacspec-chacha20 = { path = "../../examples/hacspec-chacha20" }
 hacspec-poly1305 = { path = "../../examples/hacspec-poly1305" }
 
 [dev-dependencies]
+serde_json = "1.0"
+serde = {version = "1.0", features = ["derive"]}
 rand = "0.7"
