--- a/utils/evercrypt-provider/Cargo.toml
+++ b/utils/evercrypt-provider/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 evercrypt = "0.0.3"
 hacspec-provider = { path = "../../provider" }
+aead = "0.3"
 
 [dev-dependencies]
 serde_json = "1.0"
