--- a/utils/rc-tests/Cargo.toml
+++ b/utils/rc-tests/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hacspec-provider"
+name = "rc-tests"
 version = "0.1.0"
 authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
 edition = "2018"
@@ -7,13 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-evercrypt = "0.0.3"
-hacspec-lib = { path = "../../lib" }
-hacspec-chacha20poly1305 = { path = "../../examples/hacspec-chacha20poly1305" }
-hacspec-chacha20 = { path = "../../examples/hacspec-chacha20" }
-hacspec-poly1305 = { path = "../../examples/hacspec-poly1305" }
+evercrypt-provider = { path = "../evercrypt-provider" }
+hacspec-provider = { path = "../../provider" }
 
 [dev-dependencies]
 serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
-rand = "0.7"
