--- a/examples-unsafe/Cargo.toml
+++ b/examples-unsafe/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 hacspec-lib = { path = "../lib" }
 hacspec-derive = { path = "../utils/derive" }
@@ -14,9 +12,9 @@ abstract_integers = { path = "../utils/abstract-integers" }
 hacspec-chacha20 = { path = "../examples/hacspec-chacha20" }
 hacspec-poly1305 = { path = "../examples/hacspec-poly1305" }
 hacspec-chacha20poly1305 = { path = "../examples/hacspec-chacha20poly1305" }
+hacspec-sha3 = { path = "../examples/hacspec-sha3" }
 
 [dev-dependencies]
-# FIXME: Why?
 serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 rayon = "1.3.0"
