--- a/utils/rc-bench/Cargo.toml
+++ b/utils/rc-bench/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dev-dependencies]
 evercrypt-provider = { path = "../evercrypt-provider" }
 hacspec-provider = { path = "../../provider" }
+chacha20poly1305 = "0.7"
 criterion = "^0.3"
 rand = "^0.7"
 
