--- a/utils/rc-bench/Cargo.toml
+++ b/utils/rc-bench/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "rc-tests"
+name = "rc-bench"
 version = "0.1.0"
 authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 
@@ -12,5 +10,9 @@ edition = "2018"
 evercrypt-provider = { path = "../evercrypt-provider" }
 hacspec-provider = { path = "../../provider" }
 chacha20poly1305 = "0.7"
-serde_json = "1.0"
-serde = {version = "1.0", features = ["derive"]}
+criterion = "^0.3"
+rand = "^0.7"
+
+[[bench]]
+name = "benchmarks"
+harness = false
