--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -3,8 +3,11 @@ name = "hacspec-lib"
 version = "0.1.0"
 authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT OR Apache-2.0"
+documentation = "https://docs.rs/hacspec-lib"
+description = "The hacspec library."
+readme = "README.md"
+repository = "https://github.com/hacspec/hacspec"
 
 [dependencies]
 num = "0.2"
