--- a/provider/Cargo.toml
+++ b/provider/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "hacspec-provider"
 version = "0.1.0"
-authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
+authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
+documentation = "https://docs.rs/hacspec-provider"
+description = "Cryptographic provider with hacspec primitives using the RustCrypto APIs."
+readme = "../README.md"
+repository = "https://github.com/hacspec/hacspec"
 
 [dependencies]
 hacspec-lib = { path = "../lib" }
