started crates cleanup
* rename sig to util

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ members = [
     "utils/attributes",
     "utils/rc-bench",
     "utils/rc-tests",
-    "utils/sig",
+    "utils/util",
     "language",
     "examples/hacspec-curve25519",
     "examples/hacspec-chacha20",
@@ -29,7 +29,7 @@ default-members = [
     "utils/secret-integers",
     "utils/abstract-integers",
     "utils/attributes",
-    "utils/sig",
+    "utils/util",
     "examples/hacspec-curve25519",
     "examples/hacspec-chacha20",
     "examples/hacspec-poly1305",
