--- a/utils/dev/Cargo.toml
+++ b/utils/dev/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "hacspec-dev"
-version = "0.1.0"
+version = "0.1.0-beta.1"
 authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/hacspec/hacspec"
 
 [dependencies]
-hacspec-lib = { path = "../../lib" }
+hacspec-lib = { path = "../../lib", version = "0.1.0-beta.1" }
 
 rand = "0.7"
 num = "0.2"
