--- a/utils/util/Cargo.toml
+++ b/utils/util/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
-name = "hacspec-sig"
-version = "0.1.0"
+name = "hacspec-util"
+version = "0.1.0-beta.1"
 authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "hacspec utilities"
+readme = "Readme.md"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/hacspec/hacspec"
 
 [dependencies]
 serde = {version = "1.0", features = ["derive"]}
