--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "examples/hacspec-chacha20",
     "examples/hacspec-poly1305",
     "examples/hacspec-chacha20poly1305",
+    "examples/hacspec-gimli",
     "examples/hacspec-sha256",
     "examples/hacspec-sha3",
     "examples/hacspec-ntru-prime",
@@ -34,6 +35,7 @@ default-members = [
     "examples/hacspec-chacha20",
     "examples/hacspec-poly1305",
     "examples/hacspec-chacha20poly1305",
+    "examples/hacspec-gimli",
     "examples/hacspec-sha256",
     "examples/hacspec-sha3",
     "examples/hacspec-ntru-prime",
