--- a/examples/hacspec-chacha20/Cargo.toml
+++ b/examples/hacspec-chacha20/Cargo.toml
@@ -3,20 +3,19 @@ name = "hacspec-chacha20"
 version = "0.1.0"
 authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
+documentation = "https://docs.rs/hacspec-chacha20"
+description = "hacspec chacha20 block cipher"
+readme = "README.md"
+repository = "https://github.com/hacspec/hacspec"
 
 [lib]
 path = "src/chacha20.rs"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-hacspec-lib = { path = "../../lib" }
-hacspec-derive = { path = "../../utils/derive" }
-secret_integers = { path = "../../utils/secret-integers" }
-abstract_integers = { path = "../../utils/abstract-integers" }
+hacspec-lib = { path = "../../lib", version = "0.1.0-beta.1" }
 
 [dev-dependencies]
-# FIXME: Why?
 serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 rayon = "1.3.0"
