--- a/examples/hacspec-chacha20poly1305/Cargo.toml
+++ b/examples/hacspec-chacha20poly1305/Cargo.toml
@@ -3,22 +3,21 @@ name = "hacspec-chacha20poly1305"
 version = "0.1.0"
 authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT OR Apache-2.0"
+documentation = "https://docs.rs/hacspec-chacha20poly1305"
+description = "hacspec chacha20 poly1305 authenticated encryption"
+readme = "README.md"
+repository = "https://github.com/hacspec/hacspec"
 
 [lib]
 path = "src/chacha20poly1305.rs"
 
 [dependencies]
-hacspec-lib = { path = "../../lib" }
-hacspec-derive = { path = "../../utils/derive" }
-secret_integers = { path = "../../utils/secret-integers" }
-abstract_integers = { path = "../../utils/abstract-integers" }
-hacspec-chacha20 = { path = "../hacspec-chacha20" }
-hacspec-poly1305 = { path = "../hacspec-poly1305" }
+hacspec-lib = { path = "../../lib", version = "0.1.0-beta.1" }
+hacspec-chacha20 = { path = "../hacspec-chacha20", version = "0.1.0" }
+hacspec-poly1305 = { path = "../hacspec-poly1305", version = "0.1.0" }
 
 [dev-dependencies]
-# FIXME: Why?
 serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 rayon = "1.3.0"
