--- a/provider/Cargo.toml
+++ b/provider/Cargo.toml
@@ -1,14 +1,19 @@
 [package]
 name = "hacspec-provider"
-version = "0.1.0"
-authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
+version = "0.1.0-beta.1"
+authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
+documentation = "https://docs.rs/hacspec-provider"
+description = "Cryptographic provider with hacspec primitives using the RustCrypto APIs."
+readme = "../README.md"
+repository = "https://github.com/hacspec/hacspec"
 
 [dependencies]
-hacspec-lib = { path = "../lib" }
-hacspec-chacha20poly1305 = { path = "../examples/hacspec-chacha20poly1305" }
-hacspec-chacha20 = { path = "../examples/hacspec-chacha20" }
-hacspec-poly1305 = { path = "../examples/hacspec-poly1305" }
+hacspec-lib = { path = "../lib", version = "0.1.0-beta.1" }
+hacspec-chacha20poly1305 = { path = "../examples/hacspec-chacha20poly1305", version = "0.1.0" }
+hacspec-chacha20 = { path = "../examples/hacspec-chacha20", version = "0.1.0" }
+hacspec-poly1305 = { path = "../examples/hacspec-poly1305", version = "0.1.0" }
 aead = "0.3"
 
 [dev-dependencies]
