--- a/utils/attributes/Cargo.toml
+++ b/utils/attributes/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
 name = "hacspec-attributes"
-version = "0.1.0"
+version = "0.1.0-beta.1"
 authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
 edition = "2018"
+description = "hacspec attributes"
+readme = "Readme.md"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/hacspec/hacspec"
 
 [lib]
 proc-macro = true
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 syn = { version = "1.0.17", features= ["full", "visit"] }
@@ -15,7 +18,7 @@ ansi_term = "0.12.1"
 quote = "1.0"
 serde = "1.0"
 serde_json = "1.0"
-hacspec-sig = { path = "../sig" }
+hacspec-util = { path = "../util", version = "0.1.0-beta.1" }
 
 [features]
 default = []
