Dropped folder prefixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,16 +12,16 @@ members = [
     "utils/rc-tests",
     "utils/util",
     "language",
-    "examples/hacspec-curve25519",
-    "examples/hacspec-chacha20",
-    "examples/hacspec-poly1305",
-    "examples/hacspec-chacha20poly1305",
-    "examples/hacspec-gimli",
-    "examples/hacspec-sha256",
-    "examples/hacspec-sha3",
-    "examples/hacspec-ntru-prime",
+    "examples/curve25519",
+    "examples/chacha20",
+    "examples/poly1305",
+    "examples/chacha20poly1305",
+    "examples/gimli",
+    "examples/sha256",
+    "examples/sha3",
+    "examples/ntru-prime",
     "examples-unsafe",
-    "examples/hacspec-riot-bootloader",
+    "examples/riot-bootloader",
 ]
 default-members = [
     "lib",
@@ -32,16 +32,16 @@ default-members = [
     "utils/abstract-integers",
     "utils/attributes",
     "utils/util",
-    "examples/hacspec-curve25519",
-    "examples/hacspec-chacha20",
-    "examples/hacspec-poly1305",
-    "examples/hacspec-chacha20poly1305",
-    "examples/hacspec-gimli",
-    "examples/hacspec-sha256",
-    "examples/hacspec-sha3",
-    "examples/hacspec-ntru-prime",
+    "examples/curve25519",
+    "examples/chacha20",
+    "examples/poly1305",
+    "examples/chacha20poly1305",
+    "examples/gimli",
+    "examples/sha256",
+    "examples/sha3",
+    "examples/ntru-prime",
     "examples-unsafe",
-    "examples/hacspec-riot-bootloader",
+    "examples/riot-bootloader",
 ]
 
 [profile.release]
