--- a/examples/chacha20poly1305/Cargo.toml
+++ b/examples/chacha20poly1305/Cargo.toml
@@ -14,8 +14,8 @@ path = "src/chacha20poly1305.rs"
 
 [dependencies]
 hacspec-lib = { path = "../../lib", version = "0.1.0-beta.1" }
-hacspec-chacha20 = { path = "../hacspec-chacha20", version = "0.1.0" }
-hacspec-poly1305 = { path = "../hacspec-poly1305", version = "0.1.0" }
+hacspec-chacha20 = { path = "../chacha20", version = "0.1.0" }
+hacspec-poly1305 = { path = "../poly1305", version = "0.1.0" }
 
 [dev-dependencies]
 serde_json = "1.0"
