--- a/provider/Cargo.toml
+++ b/provider/Cargo.toml
@@ -11,9 +11,9 @@ repository = "https://github.com/hacspec/hacspec"
 
 [dependencies]
 hacspec-lib = { path = "../lib", version = "0.1.0-beta.1" }
-hacspec-chacha20poly1305 = { path = "../examples/hacspec-chacha20poly1305", version = "0.1.0" }
-hacspec-chacha20 = { path = "../examples/hacspec-chacha20", version = "0.1.0" }
-hacspec-poly1305 = { path = "../examples/hacspec-poly1305", version = "0.1.0" }
+hacspec-chacha20poly1305 = { path = "../examples/chacha20poly1305", version = "0.1.0" }
+hacspec-chacha20 = { path = "../examples/chacha20", version = "0.1.0" }
+hacspec-poly1305 = { path = "../examples/poly1305", version = "0.1.0" }
 aead = "0.3"
 
 [dev-dependencies]
