add hkdf (not yet typechecking

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ members = [
     "examples-unsafe",
     "examples/riot-bootloader",
     "examples/hmac",
+    "examples/hkdf",
 ]
 default-members = [
     "lib",
@@ -44,6 +45,7 @@ default-members = [
     "examples-unsafe",
     "examples/riot-bootloader",
     "examples/hmac",
+    "examples/hkdf",
 ]
 
 [profile.release]
