more toml fixing

--- a/examples/bls12-381/Cargo.toml
+++ b/examples/bls12-381/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 path = "src/bls12-381.rs"
 
 [dependencies]
-hacspec-lib = { git = "https://github.com/hacspec/hacspec/" }
+hacspec-lib = { path = "../../lib" }
 
 [dev-dependencies]
 quickcheck = "1"
