--- a/fstar/Makefile
+++ b/fstar/Makefile
@@ -3,6 +3,7 @@
 # Customize these variables for your project
 ################################################################################
 FSTAR ?= $(FSTAR_HOME)/bin/fstar.exe --z3rlimit_factor 128
+HACL_HOME ?= ~/Desktop/repositories/hacl-star-master
 
 # The root files of your project, from which to begin scanning dependences
 FSTAR_FILES ?= Hacspec.Poly1305.fst Hacspec.Chacha20.fst Hacspec.Chacha20Poly1305.fst \
