--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ members = [
     "examples-unsafe",
     "examples/riot-bootloader",
     "protocols/tls13",
+    "protocols/edhoc",
     "examples/hmac",
     "examples/hkdf",
     "examples/p256",
@@ -52,6 +53,7 @@ default-members = [
     "examples-unsafe",
     "examples/riot-bootloader",
     "protocols/tls13",
+    "protocols/edhoc",
     "examples/hmac",
     "examples/hkdf",
     "examples/p256",
