fix benchmarks; add set_exact_chunk

--- a/examples/aes/Cargo.toml
+++ b/examples/aes/Cargo.toml
@@ -12,3 +12,9 @@ hacspec-lib = { path = "../../lib" }
 
 [dev-dependencies]
 hacspec-dev = { path = "../../utils/dev" }
+criterion = "0.3"
+rand = "0.8"
+
+[[bench]]
+name = "benchmarks"
+harness = false
