--- a/examples/curve25519/Cargo.toml
+++ b/examples/curve25519/Cargo.toml
@@ -9,3 +9,12 @@ path = "src/curve25519.rs"
 
 [dependencies]
 hacspec-lib = { path = "../../lib" }
+
+[dev-dependencies]
+hacspec-dev = { path = "../../utils/dev" }
+criterion = "0.3"
+rand = "0.8"
+
+[[bench]]
+name = "benchmarks"
+harness = false
