--- a/examples/aes128-gcm/Cargo.toml
+++ b/examples/aes128-gcm/Cargo.toml
@@ -16,3 +16,9 @@ hacspec-gf128 = { path = "../gf128", version = "0.1.0" }
 serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 hacspec-dev = { path = "../../utils/dev" }
+criterion = "0.3"
+rand = "0.8"
+
+[[bench]]
+name = "benchmarks"
+harness = false
