--- a/examples/chacha20/Cargo.toml
+++ b/examples/chacha20/Cargo.toml
@@ -20,3 +20,9 @@ serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 rayon = "1.3.0"
 hacspec-dev = { path = "../../utils/dev" }
+criterion = "0.3"
+rand = "0.8"
+
+[[bench]]
+name = "benchmarks"
+harness = false
