--- a/examples/p256/Cargo.toml
+++ b/examples/p256/Cargo.toml
@@ -14,3 +14,9 @@ hacspec-lib = { path = "../../lib" }
 serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 hacspec-dev = { path = "../../utils/dev" }
+criterion = "0.3"
+rand = "0.8"
+
+[[bench]]
+name = "benchmarks"
+harness = false
